--- a/animations❗️/car-animation !!/index.html
+++ b/animations❗️/car-animation !!/index.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="game.css">
+    <link rel="stylesheet" href="./car.css">
     <title>Game Animation</title>
 </head>
 <body>
-
-
-    <div class="bg-image">
+    <div class="back-img">
 
         <div class="car">
-            <img src="../../images/Img_06.png" alt="">
+            <img src="./img/Img_06.png" alt="">
 
         </div>
-
 
         <div class="ground">
 
         </div>
 
     </div>
+
+
+
     
 </body>
 </html>
