--- a/mypage/index.html
+++ b/mypage/index.html
@@ -1,12 +1,39 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>My Page</title>
+    <title>My Portfolio</title>
 </head>
 <body>
+    <header class="header" id="header">
+        <a href="" class="logo">Bahar Yılmaz</a>
+        <nav class="navbar">
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#skills">Skills</a>
+            <a href="#projects">Projects</a>
+        </nav>
+    </header>
+    <section class="home" id="home">
+        <div class="home-content">
+            <h3>Hello I'm</h3>
+            <h1 class="name">Bahar Yılmaz</h1>
+            <h3 class="title">And I'm a Fullstack Developer</h3>
+            <p class="info">I am a passionate full-stack developer with a love for coding, problem-solving, and exploring new technologies. Continuously learning and evolving, I enjoy building innovative solutions across the full stack. My goal is to create clean, scalable code while collaborating on projects that make a meaningful impact and drive progress.</p>
+        </div>
+        <div class="social-media">
+            <a href="" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+            <a href=""target="_blank"><i class="fa-brands fa-github"></i></a>
+            <a href=""target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+        </div>
+        <a href="" class="btn">Download CV</a>
+        <div class="home-img">
+            <img src="" alt="">
+        </div>
+    </section>
     
 </body>
 </html>
