--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -19,7 +19,7 @@
         <!-- navbar-->
         <nav class="navbar navbar-light navbar-expand-lg fixed-top shadow-sm bg-white fst-italic" >
           <img src="./img/coffee-cup.png" alt="" width="30rem">
-          <a href="#" class="navbar-brand ml-1 ms-3">LENİ KAFE</a>
+          <a href="#" class="navbar-brand ms-3 p-1">LENİ KAFE</a>
           <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"><span class="navbar-toggler-icon"></span></button>
           <div id="navbarSupportedContent" class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
