--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Building Your First Bootstrap Template | Buddy.works</title>
-  <meta name="description" content="Building Your First Bootstrap Template by Buddy">
+  <meta name="description" content="Leni Kafe">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="all,follow">
   <!-- Bootstrap CSS-->
