--- a/bootstrap/installation/index.html
+++ b/bootstrap/installation/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../assets/bootstrap-5.3.3-dist/css/bootstrap.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Bootstrap Local</h1>
+    <h1 class="text-center text-bg-success text-bg-light p-5">Bootstrap Local</h1>
+
+
+
+
+
+    <script src="../assets/bootstrap-5.3.3-dist/js/bootstrap.js"></script>
 </body>
 </html>
