--- a/bootstrap/installation/index.html
+++ b/bootstrap/installation/index.html
@@ -1,18 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/bootstrap-5.3.3-dist/css/bootstrap.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1 class="text-center text-bg-success text-bg-light p-5">Bootstrap Local</h1>
+    <link
+      rel="stylesheet"
+      href="../assets/bootstrap-5.3.3-dist/css/bootstrap.css"
+    />
 
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-lg">
+      <div class="container rounded-4 bg-dark">
+        <a class="navbar-brand" href="#">
+          <img src="./img/coffee-cup.png" alt="#" width="100px" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Our Menu</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- CAROUSEL -->
 
+    <div id="carouselExampleCaptions" class="carousel slide">
+      <div class="carousel-indicators">
+        <button
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide-to="0"
+          class="active"
+          aria-current="true"
+          aria-label="Slide 1"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide-to="1"
+          aria-label="Slide 2"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide-to="2"
+          aria-label="Slide 3"
+        ></button>
+      </div>
+      <!-- ----------- -->
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./img/slider1.jpg" class="d-block w-100" alt="..." />
+          <div class="carousel-caption d-none d-md-block">
+            <div class="hero">
+              <em>Welcome to cafeharvey.com</em>
+              <h1 class="display-1 fw-bolder">Cafe Harvey</h1>
+              <p class="fs-5 mb-3">your favourite coffee daily lives.</p>
+              <div class="btn-container">
+                <button class="btn rounded-pill">Our Story</button>
+                <button class="btn rounded-pill">Check Menu</button>
+              </div>
+            </div>
+            <div class="black rounded-5"></div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./img/slider2.jpg" class="d-block w-100" alt="..." />
+          <div class="carousel-caption d-none d-md-block">
+            <div class="hero">
+                <em>Welcome to cafeharvey.com</em>
+                <h1 class="display-1 fw-bolder">Cafe Harvey</h1>
+                <p class="fs-5 mb-3">your favourite coffee daily lives.</p>
+                <div class="btn-container">
+                  <button class="btn rounded-pill">Our Story</button>
+                  <button class="btn rounded-pill">Check Menu</button>
+                </div>
+              </div>
+              <div class="black rounded-5"></div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./img/slider3.jpg" class="d-block w-100" alt="..." />
+          <div class="carousel-caption d-none d-md-block">
+            <div class="hero">
+                <em>Welcome to cafeharvey.com</em>
+                <h1 class="display-1 fw-bolder">Cafe Harvey</h1>
+                <p class="fs-5 mb-3">your favourite coffee daily lives.</p>
+                <div class="btn-container">
+                  <button class="btn rounded-pill">Our Story</button>
+                  <button class="btn rounded-pill">Check Menu</button>
+                </div>
+              </div>
+              <div class="black rounded-5"></div>
+          </div>
+        </div>
+      </div>
+      <!-- --------- -->
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
 
+    <!-- ----------------------ABOUT US -->
+
+    
 
 
     <script src="../assets/bootstrap-5.3.3-dist/js/bootstrap.js"></script>
-</body>
+  </body>
 </html>
