--- a/bootstrap/installation/index.html
+++ b/bootstrap/installation/index.html
@@ -12,139 +12,185 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <!-- NAVBAR -->
+ <!-- ----------------------------------------------------------------------- -->
+    <!--                                 NAVBAR                                  -->
+    <!-- ----------------------------------------------------------------------- -->
     <nav class="navbar navbar-expand-lg">
-      <div class="container rounded-4 bg-dark">
-        <a class="navbar-brand" href="#">
-          <img src="./img/coffee-cup.png" alt="#" width="100px" />
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Our Menu</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
+        <div class="container rounded-4">
+          <!-- -------------------------------- logo --------------------------------- -->
+          <a class="navbar-brand" href="#">
+            <img src="./img/coffee-cup.png" alt="" width="100px" />
+          </a>
+  
+          <!-- ------------------------ Daralınca çıkan buton ------------------------ -->
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <!-- ----------------------------------------------------------------------- -->
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <!-- me-auto ms- auto yaparak menuyu sağa attık -->
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Our Menu</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
-    <!-- CAROUSEL -->
-
-    <div id="carouselExampleCaptions" class="carousel slide">
-      <div class="carousel-indicators">
-        <button
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide-to="0"
-          class="active"
-          aria-current="true"
-          aria-label="Slide 1"
-        ></button>
-        <button
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide-to="1"
-          aria-label="Slide 2"
-        ></button>
-        <button
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide-to="2"
-          aria-label="Slide 3"
-        ></button>
-      </div>
-      <!-- ----------- -->
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="./img/slider1.jpg" class="d-block w-100" alt="..." />
-          <div class="carousel-caption d-none d-md-block">
-            <div class="hero">
-              <em>Welcome to cafeharvey.com</em>
-              <h1 class="display-1 fw-bolder">Cafe Harvey</h1>
-              <p class="fs-5 mb-3">your favourite coffee daily lives.</p>
-              <div class="btn-container">
-                <button class="btn rounded-pill">Our Story</button>
-                <button class="btn rounded-pill">Check Menu</button>
+      </nav>
+  
+      <!-- ----------------------------------------------------------------------- -->
+      <!--                                CAROUSEL                                 -->
+      <!-- ----------------------------------------------------------------------- -->
+      <div id="carouselExampleCaptions" class="carousel slide">
+        <!-- ------------------ indicators - alttki 3 tane çizgi ------------------- -->
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+        </div>
+        <!-- ----------------------------------------------------------------------- -->
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./img/slider1.jpg" class="d-block w-100" alt="..." />
+            <div class="carousel-caption d-none d-md-block">
+              <div class="hero">
+                <em>Welcome to cafeharvey.com</em>
+                <h1 class="display-1 fw-bolder">Cafe Harvey</h1>
+                <p class="fs-5 mb-3">your favourite coffee daily lives.</p>
+                <div class="btn-container">
+                  <button class="btn rounded-pill me-3">Our Story</button>
+                  <button class="btn rounded-pill">Check Menu</button>
+                </div>
               </div>
+              <div class="black rounded-5"></div>
             </div>
-            <div class="black rounded-5"></div>
           </div>
-        </div>
-        <div class="carousel-item">
-          <img src="./img/slider2.jpg" class="d-block w-100" alt="..." />
-          <div class="carousel-caption d-none d-md-block">
-            <div class="hero">
-                <em>Welcome to cafeharvey.com</em>
-                <h1 class="display-1 fw-bolder">Cafe Harvey</h1>
-                <p class="fs-5 mb-3">your favourite coffee daily lives.</p>
-                <div class="btn-container">
-                  <button class="btn rounded-pill">Our Story</button>
-                  <button class="btn rounded-pill">Check Menu</button>
+          <div class="carousel-item">
+            <img src="./img/slider2.jpg" class="d-block w-100" alt="..." />
+            <div class="carousel-caption d-none d-md-block">
+              <div class="hero">
+                  <em>Welcome to cafeharvey.com</em>
+                  <h1 class="display-1 fw-bolder">Cafe Harvey</h1>
+                  <p class="fs-5 mb-3">your favourite coffee daily lives.</p>
+                  <div class="btn-container">
+                    <button class="btn rounded-pill me-3">Our Story</button>
+                    <button class="btn rounded-pill">Check Menu</button>
+                  </div>
                 </div>
-              </div>
-              <div class="black rounded-5"></div>
+                <div class="black rounded-5"></div>
+            </div>
           </div>
-        </div>
-        <div class="carousel-item">
-          <img src="./img/slider3.jpg" class="d-block w-100" alt="..." />
-          <div class="carousel-caption d-none d-md-block">
-            <div class="hero">
-                <em>Welcome to cafeharvey.com</em>
-                <h1 class="display-1 fw-bolder">Cafe Harvey</h1>
-                <p class="fs-5 mb-3">your favourite coffee daily lives.</p>
-                <div class="btn-container">
-                  <button class="btn rounded-pill">Our Story</button>
-                  <button class="btn rounded-pill">Check Menu</button>
+          <div class="carousel-item">
+            <img src="./img/slider3.jpg" class="d-block w-100" alt="..." />
+            <div class="carousel-caption d-none d-md-block">
+              <div class="hero">
+                  <em>Welcome to cafeharvey.com</em>
+                  <h1 class="display-1 fw-bolder">Cafe Harvey</h1>
+                  <p class="fs-5 mb-3">your favourite coffee daily lives.</p>
+                  <div class="btn-container">
+                    <button class="btn rounded-pill me-3">Our Story</button>
+                    <button class="btn rounded-pill">Check Menu</button>
+                  </div>
                 </div>
-              </div>
-              <div class="black rounded-5"></div>
+                <div class="black rounded-5"></div>
+            </div>
           </div>
         </div>
+        <!-- -------------------------- yanlardaki oklar --------------------------- -->
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
-      <!-- --------- -->
-      <button
-        class="carousel-control-prev"
-        type="button"
-        data-bs-target="#carouselExampleCaptions"
-        data-bs-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button
-        class="carousel-control-next"
-        type="button"
-        data-bs-target="#carouselExampleCaptions"
-        data-bs-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
+      <!-- ----------------------------------------------------------------------- -->
+      <!--                                ABOUT US                                 -->
+      <!-- ----------------------------------------------------------------------- -->
+  
+      <section id="about" class="py-5">
+  
+          <h1 class="text-center">ABOUT US</h1>
+          <div class="container">
+              <div class="row align-items-center justify-content-center gap-1">
+                  <div class="col  col-sm-12 col-md-6 ">
+                      <div class="image-container rounded-5 overflow-hidden mt-4 ">
+                          <img src="./img/about.jpg" alt="">
+                          <div class="about-info d-flex flex-column justify-content-end  p-3">
+                              <h4 class="fw-bold">We start since 2019</h4>
+                              <h4>Best in Dublin</h4>
+                          </div>
+                      </div>
+  
+                  </div>
+                  <div class="col  col-sm-12 col-md-5">
+                      <em class="pt-5">cafeharvey.com</em>
+                      <h2 class="fs-4 mb-3">
+                        The café, a cherished establishment among the townsfolk, had
+                        existed for as long as anyone could recall.
+                      </h2>
+                      <p class="fs-14">
+                        Managed by the warm and welcoming Mr. and Mrs. Watson, Harvey Cafe
+                        operated under their guidance, offering a cozy atmosphere to its
+                        patrons. This establishment benefits from the support of a free
+                        Bootstrap 5 HTML layout.
+                      </p>
+                      <button class="btn">Meet Harvey</button>
+                  </div>
+              </div>
+          </div>
+  
+      </section>
+  
 
-    <!-- ----------------------ABOUT US -->
-
-    
-
+  
+      <!-- ------------------------ Bootstrap JS linkleri ------------------------ -->
 
     <script src="../assets/bootstrap-5.3.3-dist/js/bootstrap.js"></script>
   </body>
