--- a/📌teamwork/index.html
+++ b/📌teamwork/index.html
@@ -6,12 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bootstrap Projesi</title>
 
-  <!-- BOOTSTRAP CSS -->
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-  <!-- FONTAWESOME CSS -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
   <link rel="stylesheet" href="./style.css" />
@@ -55,7 +53,7 @@
     <div class="container text-center">
       <h2 class="display-6">The IT Career of Your Dreams Starts Here!</h2>
       <h1 class="display-1">Harvey Tech!</h1>
-      <a href="#"><button type="submit" class=" btn btn-danger btn-lg">Our Services</button></a>
+      <a href="#"><button type="" class=" btn btn-danger btn-lg">Our Services</button></a>
     </div>
   </div>
 
@@ -66,21 +64,22 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, doloribus.</p>
     <div class="row mt-5">
 
-      <div class="col-md-4 col-sm-12">
-        <span class="icon btn btn-danger rounded-circle"><i class="fas fa-code fa-5x mt-4"></i></span>
-        <h4 class="iconhead mt-3">Programming</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, alias?</p>
-      </div>
-      <div class="col-md-4 col-sm-12">
-        <span class="icon btn btn-danger rounded-circle"><i class="fas fa-palette fa-5x mt-4"></i></span>
-        <h4 class="iconhead mt-3">Design</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, alias?</p>
-      </div>
-      <div class="col-md-4 col-sm-12">
-        <span class="icon btn btn-danger rounded-circle"><i class="fas fa-network-wired fa-5x mt-4"></i></span>
-        <h4 class="iconhead mt-3">Networking</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, alias?</p>
-      </div>
+      <div class="row mt-5">
+        <div class="col-sm-12 col-md-4">
+          <span class="icon btn btn-danger rounded-circle" disableb><i class="fas fa-code fa-5x mt-4"></i></span>
+          <h3 lass="iconhead mt-3">Programming</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, ex.</p>
+        </div>
+        <div class="col-sm-12 col-md-4">
+          <span class="icon btn btn-danger rounded-circle" disableb><i class="fas fa-palette fa-5x mt-4"></i></span>
+          <h3 class="iconhead mt-3">Design</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, ex.</p>
+        </div>
+        <div class="col-sm-12 col-md-4">
+          <span class="icon btn btn-danger rounded-circle" disableb><i class="fas fa-network-wired fa-5x mt-4"></i></span>
+          <h3 class="iconhead mt-3">Networking</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, ex.</p>
+        </div>
 
     </div>
 
@@ -179,8 +178,7 @@
           <p>
         </div>
         <div class="col-md-6 col-sm-12">
-          <a href=""><img src="./img/keyboard.jpeg" alt="" width="550px" height="300px"
-              class="keyboard object-fit-cover"></a>
+          <a href=""><img src="./img/keyboard.jpeg" alt="" width="550px" height="300px"class="keyboard object-fit-cover"></a>
 
         </div>
 
@@ -204,9 +202,9 @@
           <p>
             <a href="#" class="social btn btn-dark border border-dark rounded-circle m-1 text-white">
               <i class="fab fa-twitter"></i> </a>
-              <a href="" class="social btn btn-dark border border-dark rounded-circle m-1 text-white"><i
+            <a href="" class="social btn btn-dark border border-dark rounded-circle m-1 text-white"><i
                   class="fab fa-facebook"></i></a>
-              <a href="" class="social btn btn-dark border border-dark rounded-circle m-1 text-white "><i
+            <a href="" class="social btn btn-dark border border-dark rounded-circle m-1 text-white "><i
                   class="fab fa-linkedin-in"></i></a>
           </p>
         </div>
@@ -252,7 +250,6 @@
     <a href="https://www.amazon.com/" target="_blank"><img src="./img/amazon-logo.png" alt="" width="150px"></a>
     <a href="https://www.ing.com/" target="_blank"><img src="./img/ing.logo.png" alt="" width="150px"></a>
     <a href="https://www.siemens.com/" target="_blank"><img src="./img/siemens-logo.png" alt="" width="150px"></a>
-   
   </div>
 
 
@@ -279,6 +276,12 @@
     </form>
   </div>
 
+  <!--rıghts -->
+
+
+  <div class="container text-center pt-5 pb-5">
+    All Rights Reserved &copy; 2022
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
