--- a/📌1.TEAM/index.html
+++ b/📌1.TEAM/index.html
@@ -101,7 +101,7 @@
     <div class="container">
       <div class="row mt-3 g-3">
         <div class="col-sm-12 col-md-4">
-          <div class="card">
+          <div class="card" style="width:200; height: 200;">
             <img src="./img/student1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Lorem, ipsum.</h5>
