--- a/teamwork/index.html
+++ b/teamwork/index.html
@@ -35,6 +35,6 @@
           </div>
         </div>
     </div>
-    <script src="app.js"></script>
+    <script src="score.js"></script>
   </body>
 </html>
