--- a/score tracker/index.html
+++ b/score tracker/index.html
@@ -32,6 +32,7 @@
                 <button class="b2">+ 1 for Player 2</button>
                 <button class="b3">RESET</button>
             </div>
+            <p class="message"></p>
           </div>
         </div>
     </div>
