--- a/hithere-page/index.html
+++ b/hithere-page/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Page</title>
-    <link rel="stylesheet" href="./datapage.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
     <header>
         <a href="#">
-            <img src="./images/1.jpg" alt="">
+            <img src="./images/logo.jpg" alt="Logo">
         </a>
         <section class="sign">
             <a href="#">Login</a> |
@@ -26,8 +26,8 @@
         <a href="#">Contact</a>
     </nav>
     <nav class="banner">
-        <a href="">
-            <img src="./images/bannerdata.jpg" class="code">
+        <a href="#">
+            <img src="./images/bannerdata.jpg" alt="Banner Image" class="code">
         </a>
         <section class="write">
             <h2>Hi There!</h2>
@@ -39,24 +39,13 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt dolores eius maiores nihil dolorem quod, iste id quasi asperiores beatae voluptatum sint molestias facere, laboriosam amet dolor earum cupiditate eaque sapiente repellat aut eveniet ut modi neque! Placeat, optio, voluptatum iusto officiis eligendi libero tempore praesentium molestiae velit explicabo sapiente omnis, quae earum sequi fuga quas sed tenetur reprehenderit illo! Perspiciatis sapiente quas, accusamus obcaecati nulla nemo vel, iusto natus facere sed est fugit aut?</p>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis delectus nemo explicabo odit, maiores obcaecati exercitationem doloribus, qui distinctio commodi cumque dolor dignissimos omnis aliquam nisi repellat iure nihil vel ut? Veritatis iure aperiam porro, eum eveniet iste ducimus repellendus beatae. Quisquam ab nisi praesentium, quos explicabo velit amet doloribus sunt maxime facere dolor voluptas dignissimos iste. Ducimus fugiat odit eius non, magnam animi aspernatur veniam ad? Error, eius ea. Commodi aliquid porro similique laudantium! Ut repellat illo placeat culpa odit eum excepturi! Quo magnam quaerat dolores accusantium. Perferendis inventore corporis corrupti nemo quae sit odio. Dolorem dolorum ipsam atque.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt dolores eius maiores nihil dolorem quod, iste id quasi asperiores beatae voluptatum sint molestias facere, laboriosam amet dolor earum cupiditate eaque sapiente repellat aut eveniet ut modi neque! Placeat, optio, voluptatum iusto officiis eligendi libero tempore praesentium molestiae velit explicabo sapiente omnis, quae earum sequi fuga quas sed tenetur reprehenderit illo! Perspiciatis sapiente quas, accusamus obcaecati nulla nemo vel, iusto natus facere sed est fugit aut?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum vitae rerum sunt reiciendis illo incidunt officia eum sapiente consequuntur. Nemo rerum eaque quia at maiores, repudiandae nulla blanditiis similique labore voluptatibus autem veritatis quod vel pariatur amet ad. Veritatis quam neque blanditiis obcaecati at debitis quo rem eligendi possimus voluptatibus a iusto, nobis cum, eos fuga. Voluptatibus ullam ut distinctio repellat, labore possimus modi rerum ducimus itaque et facere commodi ad animi voluptatem blanditiis at tenetur quod officiis debitis inventore veritatis corrupti saepe! Ut, quibusdam reprehenderit. Beatae doloribus ab vero officia quos, sequi vitae commodi nemo non inventore reiciendis veniam. Saepe ipsa facilis ea ullam repudiandae ratione totam vero! Quo placeat deserunt harum impedit libero ab autem ad quis ipsum.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt dolores eius maiores nihil dolorem quod, iste id quasi asperiores beatae voluptatum sint molestias facere, laboriosam amet dolor earum cupiditate eaque sapiente repellat aut eveniet ut modi neque! Placeat, optio, voluptatum iusto officiis eligendi libero tempore praesentium molestiae velit explicabo sapiente omnis, quae earum sequi fuga quas sed tenetur reprehenderit illo! Perspiciatis sapiente quas, accusamus obcaecati nulla nemo vel, iusto natus facere sed est fugit aut?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt dolores eius maiores nihil dolorem quod, iste id quasi asperiores beatae voluptatum sint molestias facere, laboriosam amet dolor earum cupiditate eaque sapiente repellat aut eveniet ut modi neque! Placeat, optio, voluptatum iusto officiis eligendi libero tempore praesentium molestiae velit explicabo sapiente omnis, quae earum sequi fuga quas sed tenetur reprehenderit illo! Perspiciatis sapiente quas, accusamus obcaecati nulla nemo vel, iusto natus facere sed est fugit aut?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, soluta voluptatibus odio aut, nam hic cumque ut ea delectus esse cupiditate accusamus quasi. Sunt impedit adipisci quas eligendi quibusdam expedita, hic eos dolorem, pariatur cupiditate nisi dolore assumenda tenetur voluptate minima, explicabo ullam? Numquam commodi iure qui ab repellat dolore impedit fugiat accusantium ex magni labore autem quis aspernatur quo beatae rem molestias, distinctio esse sequi minus alias. Reprehenderit possimus voluptatum accusantium minus ex inventore nemo debitis blanditiis porro, aut modi repudiandae, dolorum nulla facilis dolor ea facere dolore laudantium quam. Officiis, animi vel. Error accusantium excepturi perferendis eveniet! Consequuntur.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt dolores eius maiores nihil dolorem quod, iste id quasi asperiores beatae voluptatum sint molestias facere, laboriosam amet dolor earum cupiditate eaque sapiente repellat aut eveniet ut modi neque! Placeat, optio, voluptatum iusto officiis eligendi libero tempore praesentium molestiae velit explicabo sapiente omnis, quae earum sequi fuga quas sed tenetur reprehenderit illo! Perspiciatis sapiente quas, accusamus obcaecati nulla nemo vel, iusto natus facere sed est fugit aut?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto expedita asperiores deserunt impedit eveniet! Nulla repudiandae, mollitia quis laborum, libero autem praesentium architecto porro eum, doloribus assumenda ab. Quam, hic vitae officia exercitationem quibusdam quidem nulla. Suscipit in, odit commodi eligendi quam totam debitis consequuntur perspiciatis ipsa libero inventore non velit ex provident error eius ipsam corporis nihil nostrum natus! Necessitatibus quod numquam error ipsam consequuntur nisi iure maiores repudiandae mollitia. Autem eius expedita molestias fuga debitis, adipisci veritatis eveniet repellendus fugiat minus optio officiis numquam architecto labore. Ipsam, veritatis cumque beatae enim doloribus illum explicabo fugiat nulla nemo neque!</p>
-
+        <!-- More content... -->
     </main>
     <section class="slack">
         <a href="#">
             <i class="fa-brands fa-slack"></i>
         </a>
     </section>
-
-
-
-
-
 </body>
 
 </html>
